[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kbase-agentic"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "langchain==1.2.10",
    "langchain-anthropic ==1.3.4",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.10"
]

[project.urls]
Documentation = ""
Issues = ""
Source = ""

[tool.hatch.version]
path = "src/kbase_agentic/__about__.py"


[tool.hatch.envs.default]
python = "3.12"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kbase_agentic tests}"

[tool.coverage.run]
source_pkgs = ["kbase_agentic", "tests"]
branch = true
parallel = true
omit = [
  "src/kbase_agentic/__about__.py",
]

[tool.coverage.paths]
kbase_agentic = ["src/kbase_agentic", "*/kbase-agentic/src/kbase_agentic"]
tests = ["tests", "*/kbase-agentic/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
